Add backgroundcolor under images

--- a/app/index.html
+++ b/app/index.html
@@ -155,7 +155,7 @@
 	<a class="button button-explore" href="">Check offers</a>
 	</div>
 	<div class="explore-city__image">
-		<img src="images/SandomierzBig.jpg" alt="City om the riverside">
+		<img src="images/SandomierzBig.jpg" alt="City on the riverside">
 	</div>
 	</div>
 </section>
