Add js(on mousover) for best-offer block

--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
 		<div class="best-offers__item offer-fifth">
 			<h3 class="best-offers__header">Karpacz</h3>
 			<p class="best-offers__place">Dolnoslaskie</p>
-			<a class="visually-hidden button button__offer" href="">View offers</a>
+			<a class="visually-hidden button button-offer" href="">View offers</a>
 		</div>
 
 		</div>
@@ -171,4 +171,7 @@
 	<h2 class="visually-hidden">Copyright</h2>
 	<p class="copyright__text">All rights reserved by symo.co</p>
 </section>
+
+<script src="js/common.js"></script>
 </body>
+</html>
