Added interactivity on best-offers block

--- a/app/index.html
+++ b/app/index.html
@@ -45,31 +45,31 @@
 		<div class="best-offers__item offer-first">
 			<h3 class="best-offers__header">Poznan</h3>
 			<p class="best-offers__place">Wielkopolskie</p>
-			<a class=" visually-hidden button button-offer" href="">View offers</a>
+			<a class=" visually-hidden button button-best-offer" href="">View offers</a>
 		</div >
 
 		<div class="best-offers__item offer-second">
 			<h3 class="best-offers__header">Zakopane</h3>
 			<p class="best-offers__place">Malopolskie</p>
-			<a class="visually-hidden button button-offer" href="">View offers</a>
+			<a class="visually-hidden button button-best-offer" href="">View offers</a>
 		</div>
 
 		<div class="best-offers__item offer-third">
 			<h3 class="best-offers__header">Sandomierz</h3>
 			<p class="best-offers__place">Swietokrzyskie</p>
-			<a class="visually-hidden button button-offer" href="">View offers</a>
+			<a class="visually-hidden button button-best-offer" href="">View offers</a>
 		</div>
 
 		<div class="best-offers__item offer-fourth">
 			<h3 class="best-offers__header">Soport</h3>
 			<p class="best-offers__place">Pomorskie</p>
-			<a class="visually-hidden button button-offer" href="">View offers</a>
+			<a class="visually-hidden button button-best-offer" href="">View offers</a>
 		</div>
 
 		<div class="best-offers__item offer-fifth">
 			<h3 class="best-offers__header">Karpacz</h3>
 			<p class="best-offers__place">Dolnoslaskie</p>
-			<a class="visually-hidden button button-offer" href="">View offers</a>
+			<a class="visually-hidden button button-best-offer" href="">View offers</a>
 		</div>
 
 		</div>
@@ -89,12 +89,12 @@
 				</label>
 				<div class="search-buttons-wrapper">
 			<div class="search-buttons">
-				<button class="button button__search" type="submit">Journey</button>
-				<button class="button button__search" type="submit">Travels</button>
-				<button class="button button__search" type="submit">Guide</button>
+				<button class="button button-search" type="submit">Journey</button>
+				<button class="button button-search" type="submit">Travels</button>
+				<button class="button button-search" type="submit">Guide</button>
 				</div>
 				
-				<button class="button button__submit" type="submit">Search</button>
+				<button class="button button-submit" type="submit">Search</button>
 				</div>
 				</form>
 			</div>
