Added tag picture and webp format for pictures

--- a/app/index.html
+++ b/app/index.html
@@ -102,42 +102,60 @@
 
 		<div class="offers-galery">
 			<div class="offers-galery__item">
-				<img src="images/Poznan.jpg" alt="Сatholic church">
+				<picture>
+					<source  srcset="image/webp/Poznan.webp" type="image/webp">
+				  <img src="images/Poznan.jpg" alt="Сatholic church">
+				</picture>
 			<h3 class="offers-galery__header">Poznan</h3>
 			<p class="best-galery__place">Wielkopolskie</p>
 			<a class="button button-offer" href="">View offers</a>
 		</div >
 
 		<div class="offers-galery__item">
-			<img src="images/Warsaw.jpg" alt="Castle">
+			<picture>
+					<source srcset="image/webp/Warsaw.webp" type="image/webp">
+				  <img src="images/Warsaw.jpg" alt="Castle">
+			</picture>
 			<h3 class="offers-galery__header">Warsaw</h3>
 			<p class="best-galery__place">Mazowieckie</p>
 			<a class="button button-offer" href="">View offers</a>
 		</div>
 
 		<div class="offers-galery__item">
-			<img src="images/Wroclav.jpg" alt="City hall in thr central square">
+      <picture>
+					<source  srcset="image/webp/Wroclav.webp" type="image/webp">
+				  <img src="images/Wroclav.jpg" alt="City hall in thr central square">
+			</picture>
 			<h3 class="offers-galery__header">Wroclaw</h3>
 			<p class="best-galery__place">Dolnoslaskie</p>
 			<a class="button button-offer" href="">View offers</a>
 		</div>
 
 		<div class="offers-galery__item">
-			<img src="images/Karpacz.jpg" alt="Path in the forest">
+			<picture>
+					<source  srcset="image/webp/Karpacz.webp" type="image/webp">
+				  <img src="images/Karpacz.jpg" alt="Path in the forest">
+			</picture>
 			<h3 class="offers-galery__header">Karpacz</h3>
 			<p class="best-galery__place">Dolnoslaskie</p>
 			<a class="button button-offer" href="">View offers</a>
 		</div>
 			
 			<div class="offers-galery__item">
-				<img src="images/Dolina.jpg" alt="Forest on mountain">
+				<picture>
+					<source srcset="image/webp/Dolina.webp" type="image/webp">
+				  <img src="images/Dolina.jpg" alt="Forest on mountain">
+			</picture>
 			<h3 class="offers-galery__header">Dolina Olczyska</h3>
 			<p class="best-galery__place">Malopolskie</p>
 			<a class="button button-offer" href="">View offers</a>
 		</div>
 
 		<div class="offers-galery__item">
-			<img src="images/Kozy.jpg" alt="Woody lakeside">
+			<picture>
+					<source  srcset="image/webp/Kozy.webp" type="image/webp">
+				  <img src="images/Kozy.jpg" alt="Woody lakeside">
+			</picture>
 			<h3 class="offers-galery__header">Kozy</h3>
 			<p class="best-galery__place">Slaskie</p>
 			<a class="button button-offer" href="">View offers</a>
@@ -155,7 +173,10 @@
 	<a class="button button-explore" href="">Check offers</a>
 	</div>
 	<div class="explore-city__image">
-		<img src="images/SandomierzBig.jpg" alt="City on the riverside">
+		<picture>
+					<source  srcset="image/webp/SandomierzBig.webp" type="image/webp">
+				  <img src="images/SandomierzBig.jpg" alt="City on the riverside">
+			</picture>
 	</div>
 	</div>
 </section>
