Abbeb retina pictures

--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
 			<div class="offers-galery__item">
 				<picture>
 					<source  srcset="image/webp/Poznan.webp" type="image/webp">
-				  <img src="images/Poznan.jpg" alt="Сatholic church">
+				  <img src="images/Poznan.jpg" alt="Сatholic church" srcset="/images/Poznan@2x.jpg 2x" />
 				</picture>
 			<h3 class="offers-galery__header">Poznan</h3>
 			<p class="best-galery__place">Wielkopolskie</p>
@@ -114,7 +114,7 @@
 		<div class="offers-galery__item">
 			<picture>
 					<source srcset="image/webp/Warsaw.webp" type="image/webp">
-				  <img src="images/Warsaw.jpg" alt="Castle">
+				  <img src="images/Warsaw.jpg" alt="Castle" srcset="/images/Warsaw@2x.jpg 2x">
 			</picture>
 			<h3 class="offers-galery__header">Warsaw</h3>
 			<p class="best-galery__place">Mazowieckie</p>
@@ -124,7 +124,7 @@
 		<div class="offers-galery__item">
       <picture>
 					<source  srcset="image/webp/Wroclav.webp" type="image/webp">
-				  <img src="images/Wroclav.jpg" alt="City hall in thr central square">
+				  <img src="images/Wroclav.jpg" alt="City hall in thr central square" srcset="/images/Wroclaw@2x.jpg 2x">
 			</picture>
 			<h3 class="offers-galery__header">Wroclaw</h3>
 			<p class="best-galery__place">Dolnoslaskie</p>
@@ -134,7 +134,7 @@
 		<div class="offers-galery__item">
 			<picture>
 					<source  srcset="image/webp/Karpacz.webp" type="image/webp">
-				  <img src="images/Karpacz.jpg" alt="Path in the forest">
+				  <img src="images/Karpacz.jpg" alt="Path in the forest" srcset="/images/Karpacz@2x.jpg 2x">
 			</picture>
 			<h3 class="offers-galery__header">Karpacz</h3>
 			<p class="best-galery__place">Dolnoslaskie</p>
@@ -144,7 +144,7 @@
 			<div class="offers-galery__item">
 				<picture>
 					<source srcset="image/webp/Dolina.webp" type="image/webp">
-				  <img src="images/Dolina.jpg" alt="Forest on mountain">
+				  <img src="images/Dolina.jpg" alt="Forest on mountain" srcset="/images/Dolina@2x.jpg 2x">
 			</picture>
 			<h3 class="offers-galery__header">Dolina Olczyska</h3>
 			<p class="best-galery__place">Malopolskie</p>
@@ -154,7 +154,7 @@
 		<div class="offers-galery__item">
 			<picture>
 					<source  srcset="image/webp/Kozy.webp" type="image/webp">
-				  <img src="images/Kozy.jpg" alt="Woody lakeside">
+				  <img src="images/Kozy.jpg" alt="Woody lakeside" srcset="/images/Kozy@2x.jpg 2x">
 			</picture>
 			<h3 class="offers-galery__header">Kozy</h3>
 			<p class="best-galery__place">Slaskie</p>
@@ -175,7 +175,7 @@
 	<div class="explore-city__image">
 		<picture>
 					<source  srcset="image/webp/SandomierzBig.webp" type="image/webp">
-				  <img src="images/SandomierzBig.jpg" alt="City on the riverside">
+				  <img src="images/SandomierzBig.jpg" alt="City on the riverside" srcset="/images/SandomierzBig@2x.jpg 2x">
 			</picture>
 	</div>
 	</div>
