Added tabs for block best-offers

--- a/app/index.html
+++ b/app/index.html
@@ -42,34 +42,34 @@
 
 <div class="best-offers__wrapper">
 
-		<div class="best-offers__item offer-first">
+		<div class="best-offers__item offer-first" tabindex="0">
 			<h3 class="best-offers__header">Poznan</h3>
 			<p class="best-offers__place">Wielkopolskie</p>
-			<a class=" visually-hidden button button-best-offer" href="">View offers</a>
+			<a class=" visually-hidden button button-best-offer" tabindex="1" href="">View offers</a>
 		</div >
 
-		<div class="best-offers__item offer-second">
+		<div class="best-offers__item offer-second" tabindex="0">
 			<h3 class="best-offers__header">Zakopane</h3>
 			<p class="best-offers__place">Malopolskie</p>
-			<a class="visually-hidden button button-best-offer" href="">View offers</a>
+			<a class="visually-hidden button button-best-offer" tabindex="1"href="">View offers</a>
 		</div>
 
-		<div class="best-offers__item offer-third">
+		<div class="best-offers__item offer-third" tabindex="0">
 			<h3 class="best-offers__header">Sandomierz</h3>
 			<p class="best-offers__place">Swietokrzyskie</p>
-			<a class="visually-hidden button button-best-offer" href="">View offers</a>
+			<a class="visually-hidden button button-best-offer" tabindex="1" href="">View offers</a>
 		</div>
 
-		<div class="best-offers__item offer-fourth">
+		<div class="best-offers__item offer-fourth" tabindex="0">
 			<h3 class="best-offers__header">Soport</h3>
 			<p class="best-offers__place">Pomorskie</p>
-			<a class="visually-hidden button button-best-offer" href="">View offers</a>
+			<a class="visually-hidden button button-best-offer" tabindex="1" href="">View offers</a>
 		</div>
 
-		<div class="best-offers__item offer-fifth">
+		<div class="best-offers__item offer-fifth" tabindex="0">
 			<h3 class="best-offers__header">Karpacz</h3>
 			<p class="best-offers__place">Dolnoslaskie</p>
-			<a class="visually-hidden button button-best-offer" href="">View offers</a>
+			<a class="visually-hidden button button-best-offer" tabindex="1" href="">View offers</a>
 		</div>
 
 		</div>
