Added focus on button in block best-offers

--- a/app/index.html
+++ b/app/index.html
@@ -45,31 +45,31 @@
 		<div class="best-offers__item offer-first" tabindex="0">
 			<h3 class="best-offers__header">Poznan</h3>
 			<p class="best-offers__place">Wielkopolskie</p>
-			<a class=" visually-hidden button button-best-offer" tabindex="1" href="">View offers</a>
+			<a class="visually-hidden  button button-best-offer" tabindex="0" href="">View offers</a>
 		</div >
 
 		<div class="best-offers__item offer-second" tabindex="0">
 			<h3 class="best-offers__header">Zakopane</h3>
 			<p class="best-offers__place">Malopolskie</p>
-			<a class="visually-hidden button button-best-offer" tabindex="1"href="">View offers</a>
+			<a class="visually-hidden button button-best-offer" tabindex="0"href="">View offers</a>
 		</div>
 
 		<div class="best-offers__item offer-third" tabindex="0">
 			<h3 class="best-offers__header">Sandomierz</h3>
 			<p class="best-offers__place">Swietokrzyskie</p>
-			<a class="visually-hidden button button-best-offer" tabindex="1" href="">View offers</a>
+			<a class="visually-hidden button button-best-offer" tabindex="0" href="">View offers</a>
 		</div>
 
 		<div class="best-offers__item offer-fourth" tabindex="0">
 			<h3 class="best-offers__header">Soport</h3>
 			<p class="best-offers__place">Pomorskie</p>
-			<a class="visually-hidden button button-best-offer" tabindex="1" href="">View offers</a>
+			<a class="visually-hidden button button-best-offer" tabindex="0" href="">View offers</a>
 		</div>
 
 		<div class="best-offers__item offer-fifth" tabindex="0">
 			<h3 class="best-offers__header">Karpacz</h3>
 			<p class="best-offers__place">Dolnoslaskie</p>
-			<a class="visually-hidden button button-best-offer" tabindex="1" href="">View offers</a>
+			<a class="visually-hidden button button-best-offer" tabindex="0" href="">View offers</a>
 		</div>
 
 		</div>
@@ -103,7 +103,7 @@
 		<div class="offers-galery">
 			<div class="offers-galery__item">
 				<picture>
-					<source  srcset="image/webp/Poznan.webp" type="image/webp">
+					<source  srcset="images/webp/Poznan.webp" type="image/webp">
 				  <img src="images/Poznan.jpg" alt="Сatholic church" srcset="/images/Poznan@2x.jpg 2x" />
 				</picture>
 			<h3 class="offers-galery__header">Poznan</h3>
@@ -113,7 +113,7 @@
 
 		<div class="offers-galery__item">
 			<picture>
-					<source srcset="image/webp/Warsaw.webp" type="image/webp">
+					<source srcset="images/webp/Warsaw.webp" type="image/webp">
 				  <img src="images/Warsaw.jpg" alt="Castle" srcset="/images/Warsaw@2x.jpg 2x">
 			</picture>
 			<h3 class="offers-galery__header">Warsaw</h3>
@@ -123,7 +123,7 @@
 
 		<div class="offers-galery__item">
       <picture>
-					<source  srcset="image/webp/Wroclav.webp" type="image/webp">
+					<source  srcset="images/webp/Wroclav.webp" type="image/webp">
 				  <img src="images/Wroclav.jpg" alt="City hall in thr central square" srcset="/images/Wroclaw@2x.jpg 2x">
 			</picture>
 			<h3 class="offers-galery__header">Wroclaw</h3>
@@ -133,7 +133,7 @@
 
 		<div class="offers-galery__item">
 			<picture>
-					<source  srcset="image/webp/Karpacz.webp" type="image/webp">
+					<source  srcset="images/webp/Karpacz.webp" type="image/webp">
 				  <img src="images/Karpacz.jpg" alt="Path in the forest" srcset="/images/Karpacz@2x.jpg 2x">
 			</picture>
 			<h3 class="offers-galery__header">Karpacz</h3>
@@ -143,7 +143,7 @@
 			
 			<div class="offers-galery__item">
 				<picture>
-					<source srcset="image/webp/Dolina.webp" type="image/webp">
+					<source srcset="images/webp/Dolina.webp" type="image/webp">
 				  <img src="images/Dolina.jpg" alt="Forest on mountain" srcset="/images/Dolina@2x.jpg 2x">
 			</picture>
 			<h3 class="offers-galery__header">Dolina Olczyska</h3>
@@ -153,7 +153,7 @@
 
 		<div class="offers-galery__item">
 			<picture>
-					<source  srcset="image/webp/Kozy.webp" type="image/webp">
+					<source  srcset="images/webp/Kozy.webp" type="image/webp">
 				  <img src="images/Kozy.jpg" alt="Woody lakeside" srcset="/images/Kozy@2x.jpg 2x">
 			</picture>
 			<h3 class="offers-galery__header">Kozy</h3>
@@ -174,7 +174,7 @@
 	</div>
 	<div class="explore-city__image">
 		<picture>
-					<source  srcset="image/webp/SandomierzBig.webp" type="image/webp">
+					 <source srcset="images/webp/SandomierzBig.webp" type="image/webp">
 				  <img src="images/SandomierzBig.jpg" alt="City on the riverside" srcset="/images/SandomierzBig@2x.jpg 2x">
 			</picture>
 	</div>
