Valid and beautyfied html

--- a/app/index.html
+++ b/app/index.html
@@ -1,198 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-	<meta name="description" content="Описание страницы короче 150 символов">
-	<meta name="keywords" content="">
-	<link href="css/main.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta name="description" content="Page about trips in Polend">
+    <meta name="keywords" content="">
+    <link href="css/main.css" rel="stylesheet">
 </head>
+
 <body>
-	
-	<section class="page">
-		<div class="page__wrapper">
-		<div class="page__logo">
-			<p class="logo__name">Polind</p>
-		</div>
-		<nav class="nav__wrapper">
-			<ul class="nav__list">
-				<li class="list__item"><a class="item-link" href="">Guide</a></li>
-				<li class="list__item"><a class="item-link" href="">Jorney</a></li>
-				<li class="list__item"><a class="item-link" href="">Hotels</a></li>
-				<li class="list__item"><a class="item-link" href="">Travels</a></li>
-			</ul>
-			<button class="visually-hidden">Search <span class="search-image"></span></button>
-		</nav>
-		</div>
-		<h1 class="visually-hidden">Travels in Poland</h1>
-		<p class="page__header">Fall in love <br><span class="header-color">with Poland</span></p>
-		<p class="page__about">Best way to find your place in Poland</p>
-		<button class="button search-button">Search your place</button>
-		<p class="page__popular">Popular places to discover</p>
-	</section>
-
-
-
-
-
-	<section class="best-offers">
-
-		<h2 class="visually-hidden">Best offers</h2>
-
-<div class="best-offers__wrapper">
-
-		<div class="best-offers__item offer-first" tabindex="0">
-			<h3 class="best-offers__header">Poznan</h3>
-			<p class="best-offers__place">Wielkopolskie</p>
-			<a class="visually-hidden  button button-best-offer" tabindex="0" href="">View offers</a>
-		</div >
-
-		<div class="best-offers__item offer-second" tabindex="0">
-			<h3 class="best-offers__header">Zakopane</h3>
-			<p class="best-offers__place">Malopolskie</p>
-			<a class="visually-hidden button button-best-offer" tabindex="0"href="">View offers</a>
-		</div>
-
-		<div class="best-offers__item offer-third" tabindex="0">
-			<h3 class="best-offers__header">Sandomierz</h3>
-			<p class="best-offers__place">Swietokrzyskie</p>
-			<a class="visually-hidden button button-best-offer" tabindex="0" href="">View offers</a>
-		</div>
-
-		<div class="best-offers__item offer-fourth" tabindex="0">
-			<h3 class="best-offers__header">Soport</h3>
-			<p class="best-offers__place">Pomorskie</p>
-			<a class="visually-hidden button button-best-offer" tabindex="0" href="">View offers</a>
-		</div>
-
-		<div class="best-offers__item offer-fifth" tabindex="0">
-			<h3 class="best-offers__header">Karpacz</h3>
-			<p class="best-offers__place">Dolnoslaskie</p>
-			<a class="visually-hidden button button-best-offer" tabindex="0" href="">View offers</a>
-		</div>
-
-		</div>
-
-	</section>
-
-
-
-
-	<section class="search">
-		<h2 class="visually-hidden">Search where you want to go?</h2>
-		<div class="search-wrapper">
-			<form action="#" method="get">
-		<label class="search__header header" >
-			<p>Where you want to go?</p>
-			<input class="searchfield" name="search-trip" type="search" placeholder="Search place" >
-				</label>
-				<div class="search-buttons-wrapper">
-			<div class="search-buttons">
-				<button class="button button-search" type="submit">Journey</button>
-				<button class="button button-search" type="submit">Travels</button>
-				<button class="button button-search" type="submit">Guide</button>
-				</div>
-				
-				<button class="button button-submit" type="submit">Search</button>
-				</div>
-				</form>
-			</div>
-
-
-		<div class="offers-galery">
-			<div class="offers-galery__item">
-				<picture>
-					<source  srcset="images/webp/Poznan.webp" type="image/webp">
-				  <img src="images/Poznan.jpg" alt="Сatholic church" srcset="/images/Poznan@2x.jpg 2x" />
-				</picture>
-			<h3 class="offers-galery__header">Poznan</h3>
-			<p class="best-galery__place">Wielkopolskie</p>
-			<a class="button button-offer" href="">View offers</a>
-		</div >
-
-		<div class="offers-galery__item">
-			<picture>
-					<source srcset="images/webp/Warsaw.webp" type="image/webp">
-				  <img src="images/Warsaw.jpg" alt="Castle" srcset="/images/Warsaw@2x.jpg 2x">
-			</picture>
-			<h3 class="offers-galery__header">Warsaw</h3>
-			<p class="best-galery__place">Mazowieckie</p>
-			<a class="button button-offer" href="">View offers</a>
-		</div>
-
-		<div class="offers-galery__item">
-      <picture>
-					<source  srcset="images/webp/Wroclav.webp" type="image/webp">
-				  <img src="images/Wroclav.jpg" alt="City hall in thr central square" srcset="/images/Wroclaw@2x.jpg 2x">
-			</picture>
-			<h3 class="offers-galery__header">Wroclaw</h3>
-			<p class="best-galery__place">Dolnoslaskie</p>
-			<a class="button button-offer" href="">View offers</a>
-		</div>
-
-		<div class="offers-galery__item">
-			<picture>
-					<source  srcset="images/webp/Karpacz.webp" type="image/webp">
-				  <img src="images/Karpacz.jpg" alt="Path in the forest" srcset="/images/Karpacz@2x.jpg 2x">
-			</picture>
-			<h3 class="offers-galery__header">Karpacz</h3>
-			<p class="best-galery__place">Dolnoslaskie</p>
-			<a class="button button-offer" href="">View offers</a>
-		</div>
-			
-			<div class="offers-galery__item">
-				<picture>
-					<source srcset="images/webp/Dolina.webp" type="image/webp">
-				  <img src="images/Dolina.jpg" alt="Forest on mountain" srcset="/images/Dolina@2x.jpg 2x">
-			</picture>
-			<h3 class="offers-galery__header">Dolina Olczyska</h3>
-			<p class="best-galery__place">Malopolskie</p>
-			<a class="button button-offer" href="">View offers</a>
-		</div>
-
-		<div class="offers-galery__item">
-			<picture>
-					<source  srcset="images/webp/Kozy.webp" type="image/webp">
-				  <img src="images/Kozy.jpg" alt="Woody lakeside" srcset="/images/Kozy@2x.jpg 2x">
-			</picture>
-			<h3 class="offers-galery__header">Kozy</h3>
-			<p class="best-galery__place">Slaskie</p>
-			<a class="button button-offer" href="">View offers</a>
-		</div>
-		</div>
-	</section>
-
-<section class="explore-city">
-	<h2 class="explore-city__header header">Explore city</h2>
-	<div class="explore-city__wrapper">
-	<div class="explore-city__text">
-	<h3 class="text__header header">Sandomierz</h3>
-	<p class="text__paragraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita eligendi, aut maiores assumenda dolore sapiente, fugit asperiores placeat harum blanditiis possimus consequuntur sed magnam nostrum quas accusamus cumque labore!</p>
-	<p class="text__paragraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium eligendi magni, sed ipsum doloremque autem. Nihil placeat magni debitis, eveniet, sed id obcaecati repellendus quibusdam! Incidunt veniam error omnis nesciunt.</p>
-	<a class="button button-explore" href="">Check offers</a>
-	</div>
-	<div class="explore-city__image">
-		<picture>
-					 <source srcset="images/webp/SandomierzBig.webp" type="image/webp">
-				  <img src="images/SandomierzBig.jpg" alt="City on the riverside" srcset="/images/SandomierzBig@2x.jpg 2x">
-			</picture>
-	</div>
-	</div>
-</section>
-
-<section class="sign">
-	<h2 class="visually-hidden">Sign up</h2>
-	<b class="sign__enjoy">Enjoy your jorney</b>
-	<button class="button button-sign">Sign up</button>
-	<p class="sign__mail">You can also sign up on our <a href="mailto:hello@polind.com.au">newsletter</a></p>
-</section>
-
-<section class="copyright">
-	<h2 class="visually-hidden">Copyright</h2>
-	<p class="copyright__text">All rights reserved by symo.co</p>
-</section>
-
-<script src="js/common.js"></script>
+    <section class="page">
+        <div class="page__wrapper">
+            <div class="page__logo">
+                <p class="logo__name">Polind</p>
+            </div>
+            <nav class="nav__wrapper">
+                <ul class="nav__list">
+                    <li class="list__item"><a class="item-link" href="">Guide</a></li>
+                    <li class="list__item"><a class="item-link" href="">Jorney</a></li>
+                    <li class="list__item"><a class="item-link" href="">Hotels</a></li>
+                    <li class="list__item"><a class="item-link" href="">Travels</a></li>
+                </ul>
+                <button class="visually-hidden">Search <span class="search-image"></span></button>
+            </nav>
+        </div>
+        <h1 class="visually-hidden">Travels in Poland</h1>
+        <p class="page__header">Fall in love <br><span class="header-color">with Poland</span></p>
+        <p class="page__about">Best way to find your place in Poland</p>
+        <button class="button search-button">Search your place</button>
+        <p class="page__popular">Popular places to discover</p>
+    </section>
+    <section class="best-offers">
+        <h2 class="visually-hidden">Best offers</h2>
+        <div class="best-offers__wrapper">
+            <div class="best-offers__item offer-first" tabindex="0">
+                <h3 class="best-offers__header">Poznan</h3>
+                <p class="best-offers__place">Wielkopolskie</p>
+                <a class="visually-hidden  button button-best-offer" tabindex="0" href="">View offers</a>
+            </div>
+            <div class="best-offers__item offer-second" tabindex="0">
+                <h3 class="best-offers__header">Zakopane</h3>
+                <p class="best-offers__place">Malopolskie</p>
+                <a class="visually-hidden button button-best-offer" tabindex="0" href="">View offers</a>
+            </div>
+            <div class="best-offers__item offer-third" tabindex="0">
+                <h3 class="best-offers__header">Sandomierz</h3>
+                <p class="best-offers__place">Swietokrzyskie</p>
+                <a class="visually-hidden button button-best-offer" tabindex="0" href="">View offers</a>
+            </div>
+            <div class="best-offers__item offer-fourth" tabindex="0">
+                <h3 class="best-offers__header">Soport</h3>
+                <p class="best-offers__place">Pomorskie</p>
+                <a class="visually-hidden button button-best-offer" tabindex="0" href="">View offers</a>
+            </div>
+            <div class="best-offers__item offer-fifth" tabindex="0">
+                <h3 class="best-offers__header">Karpacz</h3>
+                <p class="best-offers__place">Dolnoslaskie</p>
+                <a class="visually-hidden button button-best-offer" tabindex="0" href="">View offers</a>
+            </div>
+        </div>
+    </section>
+    <section class="search">
+        <h2 class="visually-hidden">Search where you want to go?</h2>
+        <div class="search-wrapper">
+            <form action="#" method="get">
+                <label class="search__header header">
+                    Where you want to go?<br>
+                    <input class="searchfield" name="search-trip" type="search" placeholder="Search place">
+                </label>
+                <div class="search-buttons-wrapper">
+                    <div class="search-buttons">
+                        <button class="button button-search" type="submit">Journey</button>
+                        <button class="button button-search" type="submit">Travels</button>
+                        <button class="button button-search" type="submit">Guide</button>
+                    </div>
+                    <button class="button button-submit" type="submit">Search</button>
+                </div>
+            </form>
+        </div>
+        <div class="offers-galery">
+            <div class="offers-galery__item">
+                <picture>
+                    <source srcset="images/webp/Poznan.webp" type="image/webp">
+                    <img src="images/Poznan.jpg" alt="Сatholic church" srcset="/images/Poznan@2x.jpg 2x" />
+                </picture>
+                <h3 class="offers-galery__header">Poznan</h3>
+                <p class="best-galery__place">Wielkopolskie</p>
+                <a class="button button-offer" href="">View offers</a>
+            </div>
+            <div class="offers-galery__item">
+                <picture>
+                    <source srcset="images/webp/Warsaw.webp" type="image/webp">
+                    <img src="images/Warsaw.jpg" alt="Castle" srcset="/images/Warsaw@2x.jpg 2x">
+                </picture>
+                <h3 class="offers-galery__header">Warsaw</h3>
+                <p class="best-galery__place">Mazowieckie</p>
+                <a class="button button-offer" href="">View offers</a>
+            </div>
+            <div class="offers-galery__item">
+                <picture>
+                    <source srcset="images/webp/Wroclav.webp" type="image/webp">
+                    <img src="images/Wroclav.jpg" alt="City hall in thr central square" srcset="/images/Wroclaw@2x.jpg 2x">
+                </picture>
+                <h3 class="offers-galery__header">Wroclaw</h3>
+                <p class="best-galery__place">Dolnoslaskie</p>
+                <a class="button button-offer" href="">View offers</a>
+            </div>
+            <div class="offers-galery__item">
+                <picture>
+                    <source srcset="images/webp/Karpacz.webp" type="image/webp">
+                    <img src="images/Karpacz.jpg" alt="Path in the forest" srcset="/images/Karpacz@2x.jpg 2x">
+                </picture>
+                <h3 class="offers-galery__header">Karpacz</h3>
+                <p class="best-galery__place">Dolnoslaskie</p>
+                <a class="button button-offer" href="">View offers</a>
+            </div>
+            <div class="offers-galery__item">
+                <picture>
+                    <source srcset="images/webp/Dolina.webp" type="image/webp">
+                    <img src="images/Dolina.jpg" alt="Forest on mountain" srcset="/images/Dolina@2x.jpg 2x">
+                </picture>
+                <h3 class="offers-galery__header">Dolina Olczyska</h3>
+                <p class="best-galery__place">Malopolskie</p>
+                <a class="button button-offer" href="">View offers</a>
+            </div>
+            <div class="offers-galery__item">
+                <picture>
+                    <source srcset="images/webp/Kozy.webp" type="image/webp">
+                    <img src="images/Kozy.jpg" alt="Woody lakeside" srcset="/images/Kozy@2x.jpg 2x">
+                </picture>
+                <h3 class="offers-galery__header">Kozy</h3>
+                <p class="best-galery__place">Slaskie</p>
+                <a class="button button-offer" href="">View offers</a>
+            </div>
+        </div>
+    </section>
+    <section class="explore-city">
+        <h2 class="explore-city__header header">Explore city</h2>
+        <div class="explore-city__wrapper">
+            <div class="explore-city__text">
+                <h3 class="text__header header">Sandomierz</h3>
+                <p class="text__paragraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita eligendi, aut maiores assumenda dolore sapiente, fugit asperiores placeat harum blanditiis possimus consequuntur sed magnam nostrum quas accusamus cumque labore!</p>
+                <p class="text__paragraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium eligendi magni, sed ipsum doloremque autem. Nihil placeat magni debitis, eveniet, sed id obcaecati repellendus quibusdam! Incidunt veniam error omnis nesciunt.</p>
+                <a class="button button-explore" href="">Check offers</a>
+            </div>
+            <div class="explore-city__image">
+                <picture>
+                    <source srcset="images/webp/SandomierzBig.webp" type="image/webp">
+                    <img src="images/SandomierzBig.jpg" alt="City on the riverside" srcset="/images/SandomierzBig@2x.jpg 2x">
+                </picture>
+            </div>
+        </div>
+    </section>
+    <section class="sign">
+        <h2 class="visually-hidden">Sign up</h2>
+        <b class="sign__enjoy">Enjoy your jorney</b>
+        <button class="button button-sign">Sign up</button>
+        <p class="sign__mail">You can also sign up on our <a href="mailto:hello@polind.com.au">newsletter</a></p>
+    </section>
+    <section class="copyright">
+        <h2 class="visually-hidden">Copyright</h2>
+        <p class="copyright__text">All rights reserved by symo.co</p>
+    </section>
+    <script src="js/common.js"></script>
 </body>
+
 </html>
